# C2-App-079

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Jenkinsfile  README.md  WORKLOG.md  cloudbuild.yaml  docker-compose.yml  review-pr.md  trace-6d2c27b3775ceecf7f921b95ea3739e9.json
backend/: .dockerignore  .env.example  .env.test  Dockerfile  Makefile  alembic.ini  pyproject.toml
backend/docs/: AGENT_QUICK_REF.md  BUILD_SUMMARY.md  README.md  core-architecture.md  models.md  refer-sse.md
backend/docs/adr/: 0001-fastapi.md  0002-sqlmodel-postgres.md  0003-redis-rate-limiting.md  0004-langchain-gemini.md  0005-switch-agent-llm-to-deepseek.md  0006-langgraph-agent-runtime.md
backend/docs/agent/: README.md  architecture.md  development.md  runtime-flows.md  tools.md
backend/docs/api/: README.md  agent.md  auth.md  dashboard.md  drones.md  health.md  response-patterns.md
backend/docs/architecture/: README.md  agent-architecture.md  architecture.mmd
backend/migrations/: env.py
backend/migrations/versions/: 1f6823b1c6f0_add_telemetry_temperature_humidity.py  1fbf76289c4b_create_users_table.py  218a5abda747_add_chat_sessions.py  31c9ab7d2c7f_add_user_password_hash.py  601c84998748_import_separate_models.py  7f4ee5733544_use_timezone_aware_datetimes.py  8d90cbe925e5_add_model_constraints_and_indexes.py  956e21bcf9c5_create_models.py  ade129f0dc46_add_dashboard_telemetry_indexes.py  b20b64c51624_add_admin_cost_management.py  cbff3186128e_add_iot_node_api_key_hash.py  d7c9f4a2b1e8_add_agent_run_metrics.py
backend/src/agent/: __init__.py  agent.py  agent_messages.json  agent_messages.py  checkpointing.py  decision_guard_rules.json  decision_guards.py  factory.py  graph.py  intent_router.py  llm.py  nodes.py  pre_router.py  pricing.py  prompt_defaults.py  prompts.py  react.py  reasoners.py  run_metrics.py  state.py  structured.py  tool_policy.py  tracing.py  usage.py
backend/src/agent/guardrails/: __init__.py  guardrail_rules.json  input_rails.py  llm_rails.py  (+5 more)
backend/src/api/: dependencies.py  main.py  responses.py
backend/src/core/: __init__.py  config.py  logging.py  security.py
backend/src/infrastructure/: __init__.py
backend/src/models/: __init__.py  base.py  chat_history.py  chat_session.py  coverage_result.py  flight_path.py  iot_node.py  llm_usage.py  mission.py  report.py  telemetry.py  user.py
backend/src/scripts/: seed_demo.py  sync_prompts.py
backend/tests/: fakes.py  test_admin_routes.py  test_agent.py  test_agent_checkpointing.py  test_agent_loop.py  test_agent_tracing.py  test_auth.py  test_auth_migration.py  test_chat_routes.py  test_dashboard_routes.py  test_docker_runtime_assets.py  test_drone_routes.py  test_guardrails.py  test_main.py  test_models.py  test_role_access.py  test_seed_demo.py  test_sync_prompts.py
(+215 files in other folders)
