[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous_drones"
version = "0.0.1"
description = "..."
requires-python = ">=3.11"
dependencies = ["fastapi>=0.136.3", "uvicorn>=0.49.0"]

[project.optional-dependencies]
dev = ["mypy>=2.1.0", "pre-commit>=4.6.0", "pytest>=9.0.3", "ruff>=0.15.16"]

[project.urls]
Repository = "https://github.com/AI20K-Build-Cohort-2/C2-App-079"

[tool.setuptools.packages.find]
where = ["src"]
include = ["api*"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["scripts", "src/*.egg-info"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.11"
exclude = ["^build/", "^dist/", "^scripts/", "^src/.*\\.egg-info/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "src/*.egg-info/*"]
