[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous_drones"
version = "0.0.1"
description = "..."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
    "alembic>=1.18.4",
    "pydantic-settings>=2.14.1",
    "structlog>=26.1.0",
    "redis>=8.0.0",
    "sqlmodel>=0.0.38",
    "asyncpg>=0.31.0",
    "greenlet>=3.5.1",
    "tavily_python>=0.7.25",
    "langchain_google_genai>=4.2.4",
    "PyJWT>=2.10.1",
    "pwdlib[argon2]>=0.3.0",
    "python-multipart>=0.0.20",
    "email-validator>=2.3.0",
    "langfuse>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=0.25.4",
    "ruff>=0.15.16",
    "httpx>=0.28.1",
]

[project.urls]
Repository = "https://github.com/AI20K-Build-Cohort-2/C2-App-079"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = ["scripts", "src/*.egg-info", "migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.11"
exclude = [
    "^build/",
    "^dist/",
    "^scripts/",
    "^src/.*\\.egg-info/",
    "^migrations/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore:'_UnionGenericAlias' is deprecated and slated for removal in Python 3\\.17:DeprecationWarning:google\\.genai\\.types",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "src/*.egg-info/*"]
